@@ -21,7 +21,13 @@
     <proprietary/>
   <!--no pjl--><!--No "text"?--></lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+    <usb>
+      <manufacturer>Lexmark</manufacturer>
+      <model>Lexmark X73</model>
+      <description>Lexmark X73</description>
+      <commandset>LNPAP</commandset>
+    </usb>
+  </autodetect>
   <functionality>D</functionality>
   <driver>drv_z42</driver>
   <!--verified-->
