@@ -1,3 +1,8 @@
+2005-02-25  Tim Waugh <twaugh@redhat.com>
+
+	* printer/Lexmark-X73.xml: Added IEEE 1284 information (RH
+	  bug #149556).
+
 2005-02-24  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* driver/oki4w.xml, driver/oki4drv.xml, opt/95.xml, opt/121.xml,
